fixed alignment issues

--- a/style/style.scss
+++ b/style/style.scss
@@ -183,7 +183,7 @@ nav li a:hover {
     p {
         margin-top: 50px;
         text-align: left;
-        padding: 20px;
+        margin-left: 0;
         font-weight: normal;
     }
 }
